namespace-per-tenant/handmade/multi-team/team-2-streaming/test-network-tenant-2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-network-tenant-2
  name: test-network-tenant-2
  namespace: streaming
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: test-network-tenant-2

---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: test-network-tenant-2
  name: test-network-tenant-2
  namespace: streaming
spec:
  containers:
  - image: nginx
    name: test-network-tenant-2
    ports:
    - containerPort: 80
    resources: 
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
