namespace-per-tenant/handmade/multi-team/team-2-streaming/network-policy-tenant-2.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: streaming
  name: deny-from-other-tenant
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
